--- a/book_store/requirements.txt
+++ b/book_store/requirements.txt
@@ -3,7 +3,7 @@ Django==3.1.5
 djangorestframework==3.12.2
 importlib-metadata==3.4.0
 Markdown==3.3.3
-pkg-resources==0.0.0
+psycopg2-binary==2.8.6
 pytz==2020.5
 sqlparse==0.4.1
 typing-extensions==3.7.4.3
